# temporal-sdk-cpp

./: .gitignore  CLAUDE.md  EXAMPLE_PLAN.md  IMPLEMENTATION_PLAN.md  README.md
.claude/: settings.local.json
.github/workflows/: cpp-ci.yml
cpp/: CMakeLists.txt  CMakePresets.json  Doxyfile  vcpkg.json
cpp/cmake/: CompilerWarnings.cmake  Platform.cmake  ProtobufGenerate.cmake  temporalio.pc.in  temporalioConfig.cmake.in
cpp/examples/: CMakeLists.txt
cpp/examples/activity_worker/: main.cpp
cpp/examples/hello_world/: main.cpp
cpp/examples/signal_workflow/: main.cpp
cpp/examples/timer_workflow/: main.cpp
cpp/examples/update_workflow/: main.cpp
cpp/examples/workflow_activity/: main.cpp
cpp/extensions/diagnostics/: CMakeLists.txt
cpp/extensions/diagnostics/include/temporalio/extensions/diagnostics/: custom_metric_meter.h
cpp/extensions/diagnostics/src/: custom_metric_meter.cpp
cpp/extensions/opentelemetry/: CMakeLists.txt
cpp/extensions/opentelemetry/include/temporalio/extensions/opentelemetry/: tracing_interceptor.h  tracing_options.h
cpp/extensions/opentelemetry/src/: tracing_interceptor.cpp
cpp/include/temporalio/: version.h
cpp/include/temporalio/activities/: activity.h  activity_context.h
cpp/include/temporalio/api/: common.h  enums.h  failure.h  history.h  proto_util.h  schedule.h  taskqueue.h  workflow.h
cpp/include/temporalio/async_/: cancellation_token.h  coroutine_scheduler.h  run_sync.h  task.h  task_completion_source.h
cpp/include/temporalio/bridge/api/: activity_result.h  activity_task.h  child_workflow.h  common.h  nexus.h  workflow_activation.h  workflow_commands.h  workflow_completion.h
cpp/include/temporalio/client/: temporal_client.h  temporal_connection.h  workflow_handle.h  workflow_options.h
cpp/include/temporalio/client/interceptors/: client_interceptor.h
cpp/include/temporalio/common/: enums.h  metric_meter.h  retry_policy.h  search_attributes.h  workflow_history.h
cpp/include/temporalio/converters/: data_converter.h  payload_conversion.h  proto_payload_converter.h
cpp/include/temporalio/exceptions/: temporal_exception.h
cpp/include/temporalio/nexus/: operation_handler.h
cpp/include/temporalio/runtime/: temporal_runtime.h
cpp/include/temporalio/testing/: activity_environment.h  workflow_environment.h
cpp/include/temporalio/worker/: temporal_worker.h  workflow_instance.h  workflow_replayer.h
cpp/include/temporalio/worker/interceptors/: worker_interceptor.h
cpp/include/temporalio/worker/internal/: activity_worker.h  nexus_worker.h  workflow_worker.h
cpp/include/temporalio/workflows/: activity_options.h  workflow.h  workflow_definition.h  workflow_info.h
cpp/src/temporalio/: temporalio.cpp
cpp/src/temporalio/activities/: activity_context.cpp
cpp/src/temporalio/async_/: coroutine_scheduler.cpp
cpp/src/temporalio/bridge/: byte_array.h  call_scope.h  cancellation_token.h  client.cpp  client.h  ephemeral_server.cpp  ephemeral_server.h  ffi_stubs.cpp  interop.h  replayer.cpp  replayer.h  runtime.cpp  runtime.h  safe_handle.h  worker.cpp  worker.h
cpp/src/temporalio/client/: temporal_client.cpp  temporal_connection.cpp  workflow_handle.cpp
cpp/src/temporalio/client/interceptors/: client_interceptor.cpp
cpp/src/temporalio/common/: metric_meter.cpp  workflow_history.cpp
cpp/src/temporalio/converters/: data_converter.cpp
cpp/src/temporalio/exceptions/: temporal_exception.cpp
cpp/src/temporalio/nexus/: operation_handler.cpp
cpp/src/temporalio/runtime/: temporal_runtime.cpp
cpp/src/temporalio/testing/: activity_environment.cpp  workflow_environment.cpp
cpp/src/temporalio/worker/: temporal_worker.cpp  workflow_instance.cpp  workflow_replayer.cpp
cpp/src/temporalio/worker/internal/: activity_worker.cpp  nexus_worker.cpp  workflow_worker.cpp
cpp/src/temporalio/workflows/: workflow.cpp
cpp/tests/: CMakeLists.txt  main.cpp
cpp/tests/activities/: activity_context_tests.cpp  activity_definition_tests.cpp
cpp/tests/async/: cancellation_token_tests.cpp  coroutine_scheduler_tests.cpp  task_completion_source_tests.cpp  task_tests.cpp
cpp/tests/bridge/: call_scope_tests.cpp  safe_handle_tests.cpp
cpp/tests/client/: client_interceptor_tests.cpp  client_options_tests.cpp  connection_options_tests.cpp  workflow_handle_tests.cpp
cpp/tests/common/: enums_tests.cpp  metric_meter_tests.cpp  retry_policy_tests.cpp  search_attributes_tests.cpp  workflow_history_tests.cpp
cpp/tests/converters/: data_converter_tests.cpp  failure_converter_tests.cpp
cpp/tests/coro/: coroutine_scheduler_tests.cpp
cpp/tests/exceptions/: temporal_exception_tests.cpp
cpp/tests/extensions/diagnostics/: custom_metric_meter_tests.cpp
cpp/tests/extensions/opentelemetry/: tracing_interceptor_tests.cpp  tracing_options_tests.cpp
cpp/tests/fixtures/: workflow_environment_fixture.cpp  workflow_environment_fixture.h
cpp/tests/general/: version_tests.cpp
cpp/tests/nexus/: operation_handler_tests.cpp
cpp/tests/runtime/: temporal_runtime_tests.cpp
cpp/tests/testing/: activity_environment_tests.cpp  workflow_environment_tests.cpp
cpp/tests/worker/: internal_worker_options_tests.cpp  worker_interceptor_tests.cpp  worker_options_tests.cpp  workflow_instance_tests.cpp  workflow_replayer_tests.cpp
cpp/tests/workflows/: workflow_ambient_tests.cpp  workflow_definition_tests.cpp  workflow_info_tests.cpp
